--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
       </div>
     </div>
     <div class="container">
-      <nav class="main-nav">
-        <a href="index.html" class="active">首页</a>
-        <a href="about.html">关于我们</a>
-        <a href="products.html">我们的产品</a>
-        <a href="strengths.html">我们的强项</a>
-        <a href="contact.html">联系我们</a>
-      </nav>
+      <div class="main-nav-wrapper"> 
+        <nav class="main-nav">
+          <a href="index.html" class="active">首页</a>
+          <a href="products.html">我们的产品</a>
+          <a href="strengths.html">我们的强项</a>
+          <a href="about.html">关于我们</a>
+          <a href="contact.html">联系我们</a>
+        </nav>
+    </div>
     </div>
   </header>
   <main>
@@ -51,10 +53,10 @@
     <section class="company-profile-section">
       <h2>Company Profile</h2>
       <div class="company-profile-content">
-        <p>We introduce ourselves as an export division of ARTI CHEMICALS, who is the one of the leading manufacturer of dyes from ELECTROPLATING DYES, Biological stains, PH Indicators, Hair Colour, safranine series. Under well equiped plant with qualified chemists.</p>
+        <p>We introduce ourselves as an export division of SETRA, who is the one of the leading manufacturer of dyes from ELECTROPLATING DYES, Biological stains, PH Indicators, Hair Colour, safranine series. Under well equiped plant with qualified chemists.</p>
         <ul>
           <li><strong>Year of Establishment:</strong> 2009</li>
-          <li><strong>Primary Business:</strong> The ARTI CHEMICALS has been recognized in the field of Laboratory Chemicals since April 2009. During this period we had to persuade every customer for a quality product.</li>
+          <li><strong>Primary Business:</strong> The SETRA has been recognized in the field of Laboratory Chemicals since April 2009. During this period we had to persuade every customer for a quality product.</li>
           <li><strong>Annual Turnover:</strong> Detailed quality products with over 100 products. The technical advancement of the cervical product specification has been achieved and we have made significant progress.</li>
           <li><strong>Market Covered:</strong> During this period we had to persuade every customer for a quality product. As the business expanded in India and different countries, it was difficult to inform all customers about different products. After that, we decided to prepare a book from where our valued customers get information about our products.</li>
         </ul>
@@ -72,15 +74,15 @@
           <li>Safranine Series</li>
           <li>Laboratory Chemicals</li>
         </ul>
-        <p>We introduce ourselves as an export division of ARTI CHEMICALS, who is the one of the leading manufacturer of dyes from ELECTROPLATING DYES, Biological stains, PH Indicators, Hair Colour, safranine series. Under well equiped plant with qualified chemists.</p>
+        <p>We introduce ourselves as an export division of SETRA, who is the one of the leading manufacturer of dyes from ELECTROPLATING DYES, Biological stains, PH Indicators, Hair Colour, safranine series. Under well equiped plant with qualified chemists.</p>
       </div>
     </section>
   </main>
   <footer id="site-footer">
     <div class="footer-content">
-      <div>深圳市西特新环保材料有限公司 © 2024</div>
       <div>地址：深圳市松岗镇江边工业一路9号</div>
       <div>电话：13724351021 | 座机：0755-27782265</div>
+      <div>Copyright @ 2025, SETRA New Environmental Protection Material Co., Ltd.</div>
     </div>
   </footer>
   <script src="assets/js/products_all.js"></script>
