--- a/products.html
+++ b/products.html
@@ -15,7 +15,6 @@
         <span id="site-title">深圳市西特新环保材料有限公司</span>
       </div>
 
-
       <div class="phone_lang_switch"> 
         <div class="word_right">
           <div class="iconPhone icon-dh"></div>
@@ -31,13 +30,15 @@
       </div>
     </div>
     <div class="container">
-      <nav class="main-nav">
-        <a href="index.html">首页</a>
-        <a href="about.html">关于我们</a>
-        <a href="products.html" class="active">我们的产品</a>
-        <a href="strengths.html">我们的强项</a>
-        <a href="contact.html">联系我们</a>
-      </nav>
+      <div class="main-nav-wrapper"> 
+        <nav class="main-nav">
+          <a href="index.html">首页</a>
+          <a href="products.html" class="active">我们的产品</a>
+          <a href="strengths.html">我们的强项</a>
+          <a href="about.html">关于我们</a>
+          <a href="contact.html">联系我们</a>
+        </nav>
+    </div>
     </div>
   </header>
   <main class="main-content">
