--- a/about.html
+++ b/about.html
@@ -15,7 +15,6 @@
         <span id="site-title">深圳市西特新环保材料有限公司</span>
       </div>
 
-
       <div class="phone_lang_switch"> 
         <div class="word_right">
           <div class="iconPhone icon-dh"></div>
@@ -31,28 +30,39 @@
       </div>
     </div>
     <div class="container">
-      <nav class="main-nav">
-        <a href="index.html">首页</a>
-        <a href="about.html" class="active">关于我们</a>
-        <a href="products.html">我们的产品</a>
-        <a href="strengths.html">我们的强项</a>
-        <a href="contact.html">联系我们</a>
-      </nav>
+      <div class="main-nav-wrapper"> 
+        <nav class="main-nav">
+          <a href="index.html">首页</a>
+          <a href="products.html">我们的产品</a>
+          <a href="strengths.html">我们的强项</a>
+          <a href="about.html" class="active">关于我们</a>
+          <a href="contact.html">联系我们</a>
+        </nav>
+    </div>
     </div>
   </header>
   <main class="main-content">
     <section class="about-section">
       <h2 id="about-title">公司简介</h2>
       <div id="about-desc">
-        深圳市西特新环保材料有限公司是一家专注于化工新材料研发、生产与销售的高新技术企业，致力于为客户提供高品质的化工产品和专业的技术服务。
+        <p>深圳市西特新环保材料有限公司是一家专注于化工新材料研发、生产与销售的高新技术企业，致力于为客户提供高品质的化工产品和专业的技术服务。</p>
+        
+      </div>
+      <div>
+        <p>深圳市西特新环保材料有限公司是专业电镀添加剂研发生产单位，从事电子、五金、塑胶、PCB、FPC电镀化学镀工艺全制程配套添加剂;铜、镍、锡、银、金、等添加剂,保护剂,提供特殊电镀工艺及产品配方开发。</p>
+
+        <p>公司特色产品：碱铜、无氰碱铜、焦铜、酸铜(原装德系酸铜、原装日系酸铜，均可代替德国日本品牌酸铜），公司研发无阳极泥酸铜添加剂均可应用于五金、塑胶、PCB\FPC电镀，节约阳极消耗、节约生产成本、提高生产效率、延长生产维护周期。无氰碱铜完全取代氰化物效果显著性能稳定。</p>
+        <p>我们热忱期待着为您提供优质的产品和专业的服务！本着用户至上、信誉第一的宗旨，不断创新、与时俱进的理念热服务于每一位客户。</p>
+        <p>深圳西特专注镀铜研发！ </p>
+        <p>产品详情欢迎致电+086-0755-27782265，新产品开发技术支持请致电+086 13724351021</p>
       </div>
     </section>
   </main>
   <footer id="site-footer">
     <div class="footer-content">
-      <div>深圳市西特新环保材料有限公司 © 2024</div>
       <div>地址：深圳市松岗镇江边工业一路9号</div>
       <div>电话：13724351021 | 座机：0755-27782265</div>
+      <div>Copyright @ 2025, SETRA New Environmental Protection Material Co., Ltd.</div>
     </div>
   </footer>
   <script src="assets/js/lang.js"></script>
