--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,6 @@
         <span id="site-title">深圳市西特新环保材料有限公司</span>
       </div>
 
-
       <div class="phone_lang_switch"> 
         <div class="word_right">
           <div class="iconPhone icon-dh"></div>
@@ -31,13 +30,15 @@
       </div>
     </div>
     <div class="container">
-      <nav class="main-nav">
-        <a href="index.html">首页</a>
-        <a href="about.html">关于我们</a>
-        <a href="products.html">我们的产品</a>
-        <a href="strengths.html">我们的强项</a>
-        <a href="contact.html" class="active">联系我们</a>
-      </nav>
+      <div class="main-nav-wrapper"> 
+        <nav class="main-nav">
+          <a href="index.html">首页</a>
+          <a href="products.html">我们的产品</a>
+          <a href="strengths.html">我们的强项</a>
+          <a href="about.html">关于我们</a>
+          <a href="contact.html" class="active">联系我们</a>
+        </nav>
+    </div>
     </div>
   </header>
   <main class="main-content">
@@ -56,6 +57,11 @@
         </div>
         <div class="contact-card">
           <div class="contact-icon contact-icon-address"></div>
+          <div class="contact-label">WhatApp</div>
+          <div class="contact-value">Link</div>
+        </div>
+        <div class="contact-card">
+          <div class="contact-icon contact-icon-address"></div>
           <div class="contact-label">公司地址</div>
           <div class="contact-value">深圳市松岗镇江边工业一路9号</div>
         </div>
@@ -67,9 +73,9 @@
   </main>
   <footer id="site-footer">
     <div class="footer-content">
-      <div>深圳市西特新环保材料有限公司 © 2024</div>
       <div>地址：深圳市松岗镇江边工业一路9号</div>
       <div>电话：13724351021 | 座机：0755-27782265</div>
+      <div>Copyright @ 2025, SETRA New Environmental Protection Material Co., Ltd.</div>
     </div>
   </footer>
   <script src="assets/js/lang.js"></script>
