--- a/product.html
+++ b/product.html
@@ -30,13 +30,15 @@
       </div>
     </div>
     <div class="container">
-      <nav class="main-nav">
-        <a href="index.html">首页</a>
-        <a href="about.html">关于我们</a>
-        <a href="products.html" class="active">我们的产品</a>
-        <a href="strengths.html">我们的强项</a>
-        <a href="contact.html">联系我们</a>
-      </nav>
+      <div class="main-nav-wrapper"> 
+        <nav class="main-nav">
+          <a href="index.html">首页</a>
+          <a href="products.html" class="active">我们的产品</a>
+          <a href="strengths.html">我们的强项</a>
+          <a href="about.html">关于我们</a>
+          <a href="contact.html">联系我们</a>
+        </nav>
+    </div>
     </div>
   </header>
   <main>
@@ -46,11 +48,12 @@
   </main>
   <footer id="site-footer">
     <div class="footer-content">
-      <div>深圳市西特新环保材料有限公司 © 2024</div>
       <div>地址：深圳市松岗镇江边工业一路9号</div>
       <div>电话：13724351021 | 座机：0755-27782265</div>
+      <div>Copyright @ 2025, SETRA New Environmental Protection Material Co., Ltd.</div>
     </div>
   </footer>
+  <script src="assets/js/lang.js"></script>
   <script src="assets/js/products_all.js"></script>
   <script src="assets/js/product.js"></script>
 </body>
