feature: generate the header and footer dynamic

--- a/about.html
+++ b/about.html
@@ -8,39 +8,6 @@
   <link rel="stylesheet" href="assets/font/phone.css">
 </head>
 <body>
-  <header class="main-header">
-    <div class="container">
-      <div class="logo-area">
-        <img src="assets/images/logo.png" alt="logo" class="logo-img">
-        <span id="site-title">深圳市西特新环保材料有限公司</span>
-      </div>
-
-      <div class="phone_lang_switch"> 
-        <div class="word_right">
-          <div class="iconPhone icon-dh"></div>
-          <div class="phone">
-            <div>13724351021</div>
-            <div>0755-27782265</div>
-          </div>
-        </div>
-        <div id="lang-switch">
-          <button data-lang="zh">中文</button>
-          <button data-lang="en">English</button>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="main-nav-wrapper"> 
-        <nav class="main-nav">
-          <a href="index.html">首页</a>
-          <a href="products.html">我们的产品</a>
-          <a href="strengths.html">我们的强项</a>
-          <a href="about.html" class="active">关于我们</a>
-          <a href="contact.html">联系我们</a>
-        </nav>
-    </div>
-    </div>
-  </header>
   <main class="main-content">
     <section class="about-section">
       <h2 id="about-title">公司简介</h2>
@@ -58,13 +25,7 @@
       </div>
     </section>
   </main>
-  <footer id="site-footer">
-    <div class="footer-content">
-      <div>地址：深圳市松岗镇江边工业一路9号</div>
-      <div>电话：13724351021 | 座机：0755-27782265</div>
-      <div>Copyright @ 2025, SETRA New Environmental Protection Material Co., Ltd.</div>
-    </div>
-  </footer>
   <script src="assets/js/lang.js"></script>
+  <script src="assets/js/headerFooterDomGenerator.js"></script>
 </body>
 </html> 
