--- a/contact.html
+++ b/contact.html
@@ -10,35 +10,19 @@
 <body>
   <main class="main-content">
     <section class="contact-section">
-      <h2 id="contact-title">联系我们</h2>
+      <!-- <h2 id="contact-title">联系我们</h2> -->
       <div class="contact-grid">
-        <div class="contact-card">
-          <div class="contact-icon contact-icon-phone"></div>
-          <div class="contact-label">电话</div>
-          <div class="contact-value">13724351021<br>0755-27782265</div>
-        </div>
-        <div class="contact-card">
-          <div class="contact-icon contact-icon-email"></div>
-          <div class="contact-label">邮箱</div>
-          <div class="contact-value">info@setra-ep.com</div>
-        </div>
-        <div class="contact-card">
-          <div class="contact-icon contact-icon-address"></div>
-          <div class="contact-label">WhatApp</div>
-          <div class="contact-value">Link</div>
-        </div>
-        <div class="contact-card">
-          <div class="contact-icon contact-icon-address"></div>
-          <div class="contact-label">公司地址</div>
-          <div class="contact-value">深圳市松岗镇江边工业一路9号</div>
-        </div>
       </div>
       <div class="contact-desc">
         如有任何关于化工产品的需求或疑问，欢迎随时联系我们，我们将竭诚为您服务！
       </div>
     </section>
   </main>
+  
   <script src="assets/js/lang.js"></script>
+  <script type="text/javascript">
+    pageName = 'contact';
+  </script>
   <script src="assets/js/headerFooterDomGenerator.js"></script>
 </body>
 </html> 
