--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 </head>
 
 <body>
+  
+  <section id="carousel-section">
+    <div id="carousel">
+      <!-- 轮播商品将由JS动态插入 -->
+    </div>
+  </section>
   <main>
-    <section id="carousel-section">
-      <div id="carousel">
-        <!-- 轮播商品将由JS动态插入 -->
-      </div>
-    </section>
 
     <section class="company-profile-section">
       <h2>Company Profile</h2>
@@ -41,12 +42,15 @@
           <li>Safranine Series</li>
           <li>Laboratory Chemicals</li>
         </ul>
-        <p>We introduce ourselves as an export division of SETRA, who is the one of the leading manufacturer of dyes from ELECTROPLATING DYES, Biological stains, PH Indicators, Hair Colour, safranine series. Under well equiped plant with qualified chemists.</p>
+        
       </div>
     </section>
   </main>
-  <script src="assets/js/products_all.js"></script>
   <script src="assets/js/lang.js"></script>
+
+  <script type="text/javascript">
+    pageName = 'index';
+  </script>
   <script src="assets/js/headerFooterDomGenerator.js"></script>
   <script src="assets/js/util.js"></script>
   <script src="assets/js/main.js"></script>
