--- a/product.html
+++ b/product.html
@@ -13,7 +13,11 @@
       <!-- 商品详情由JS动态插入 -->
     </section>
   </main>
+  
   <script src="assets/js/lang.js"></script>
+  <script type="text/javascript">
+    pageName = 'products';
+  </script>
   <script src="assets/js/headerFooterDomGenerator.js"></script>
   <script src="assets/js/products_all.js"></script>
   <script src="assets/js/product.js"></script>
