--- a/strengths.html
+++ b/strengths.html
@@ -10,7 +10,7 @@
 <body>
   <main class="main-content">
     <section class="strengths-section">
-      <h2 id="strengths-title">我们的强项</h2>
+      <!-- <h2 id="strengths-title">我们的强项</h2> -->
       <ul id="strengths-list">
         <li>专业的研发团队</li>
         <li>高品质的产品保障</li>
@@ -20,6 +20,9 @@
     </section>
   </main>
   <script src="assets/js/lang.js"></script>
+  <script type="text/javascript">
+    pageName = 'strengths';
+  </script>
   <script src="assets/js/headerFooterDomGenerator.js"></script>
 </body>
 </html> 
