--- a/products.html
+++ b/products.html
@@ -23,8 +23,12 @@
       </div>
     </section>
   </main>
+  
   <script src="assets/js/products_all.js"></script>
   <script src="assets/js/lang.js"></script>
+  <script type="text/javascript">
+    pageName = 'products';
+  </script>
   <script src="assets/js/headerFooterDomGenerator.js"></script>
   <script src="assets/js/util.js"></script>
   <script src="assets/js/products.js"></script>
