--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
   <script type="text/javascript">
     pageName = 'about';
   </script>
+  <!-- <script src="assets/js/lib/finisher-header.es5.min.js" type="text/javascript"></script> -->
   <script src="assets/js/headerFooterDomGenerator.js"></script>
 </body>
 </html> 
