--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
   </script>
   <script src="assets/js/lib/finisher-header.es5.min.js" type="text/javascript"></script>
   <script src="assets/js/headerFooterDomGenerator.js"></script>
+  <script src="assets/js/contact.js"></script>
   <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=w3kWkfc6Xe3epBtrwBXMnHQW1R93h9N0&s=1"></script>
   <!-- <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> -->
   <!-- <script type="importmap">
