change js to module mode

--- a/product.html
+++ b/product.html
@@ -19,7 +19,7 @@
     pageName = 'products';
   </script>
   <script src="assets/js/headerFooterDomGenerator.js"></script>
-  <script src="assets/js/products_all.js"></script>
+  <script src="assets/js/data/products_all.js"></script>
   <script src="assets/js/product.js"></script>
 </body>
 </html> 
