--- a/products.html
+++ b/products.html
@@ -24,7 +24,7 @@
     </section>
   </main>
   
-  <script src="assets/js/products_all.js"></script>
+  <script src="assets/js/data/products_all.js"></script>
   <script src="assets/js/lang.js"></script>
   <script type="text/javascript">
     pageName = 'products';
