🏗 unify the js structure

--- a/product.html
+++ b/product.html
@@ -14,11 +14,11 @@
     </section>
   </main>
   
-  <script src="assets/js/lang.js"></script>
+  <script src="assets/js/data/lang.js"></script>
   <script type="text/javascript">
     pageName = 'products';
   </script>
-  <script src="assets/js/headerFooterDomGenerator.js"></script>
+  <script src="assets/js/lib/headerFooterDomGenerator.js"></script>
   <script src="assets/js/data/products_all.js"></script>
   <script src="assets/js/product.js"></script>
 </body>
