--- a/strengths.html
+++ b/strengths.html
@@ -19,10 +19,11 @@
       </ul>
     </section>
   </main>
-  <script src="assets/js/lang.js"></script>
+  <script src="assets/js/data/lang.js"></script>
   <script type="text/javascript">
     pageName = 'strengths';
   </script>
-  <script src="assets/js/headerFooterDomGenerator.js"></script>
+  <script src="assets/js/lib/headerFooterDomGenerator.js"></script>
+  <script src="assets/js/strength.js"></script>
 </body>
 </html> 
