--- a/about.html
+++ b/about.html
@@ -17,11 +17,12 @@
       </div>
     </section>
   </main>
-  <script src="assets/js/lang.js"></script>
+  <script src="assets/js/data/lang.js"></script>
   <script type="text/javascript">
     pageName = 'about';
   </script>
   <!-- <script src="assets/js/lib/finisher-header.es5.min.js" type="text/javascript"></script> -->
-  <script src="assets/js/headerFooterDomGenerator.js"></script>
+  <script src="assets/js/lib/headerFooterDomGenerator.js"></script>
+  <script src="assets/js/about.js"></script>
 </body>
 </html> 
