--- a/contact.html
+++ b/contact.html
@@ -30,12 +30,12 @@
     </section>
   </main>
   
-  <script src="assets/js/lang.js"></script>
+  <script src="assets/js/data/lang.js"></script>
   <script type="text/javascript">
     pageName = 'contact';
   </script>
   <script src="assets/js/lib/finisher-header.es5.min.js" type="text/javascript"></script>
-  <script src="assets/js/headerFooterDomGenerator.js"></script>
+  <script src="assets/js/lib/headerFooterDomGenerator.js"></script>
   <script src="assets/js/contact.js"></script>
   <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=w3kWkfc6Xe3epBtrwBXMnHQW1R93h9N0&s=1"></script>
   <!-- <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script> -->
