--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
       </div>
     </section>
   </main>
-  <script src="assets/js/lang.js"></script>
+  <script src="assets/js/data/lang.js"></script>
 
   <script type="text/javascript">
     pageName = 'index';
   </script>
-  <script src="assets/js/headerFooterDomGenerator.js"></script>
-  <script src="assets/js/util.js"></script>
+  <script src="assets/js/lib/headerFooterDomGenerator.js"></script>
+  <script src="assets/js/lib/util.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
 
