--- a/products.html
+++ b/products.html
@@ -25,12 +25,12 @@
   </main>
   
   <script src="assets/js/data/products_all.js"></script>
-  <script src="assets/js/lang.js"></script>
+  <script src="assets/js/data/lang.js"></script>
   <script type="text/javascript">
     pageName = 'products';
   </script>
-  <script src="assets/js/headerFooterDomGenerator.js"></script>
-  <script src="assets/js/util.js"></script>
+  <script src="assets/js/lib/headerFooterDomGenerator.js"></script>
+  <script src="assets/js/lib/util.js"></script>
   <script src="assets/js/products.js"></script>
 </body>
 </html> 
